css/mobile-style.css
@media (max-width: 600px){
    :root{
        --title-font-size: 16px;
        --subtitle-font-size: 14px;
        --text-font-size: 12px;
    }

    .header-dropdown,.header-left,.dropdown-icon{
        width: 14%;
        justify-content: flex-start;
    }

    .header-top{
        padding: 12px 12px;
        width: auto;
    }

    .header-dropdown-content{
        padding-left: 12px;
    }

    /* Table styles */

    th,td{
        padding: 10px 20px;
    }

    .main-content{
        padding: 15px !important;
    }

    .index-main{
        gap: 20px !important;
    }

    #filter-input{
        gap: 10px;
    }

    #filter-input input{
        width: 50%;
    }

    .card{
        height: auto !important;
        width: 160px !important;
    }

    /* Select styles */

    #lesson-filter{
        gap: 10px;
    }

    #lesson-filter select{
        width: 50%;
    }

}

